--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,3 +23,15 @@
     max-height: 100%
   }
 }
+
+.mobileMenu {
+  position: fixed;
+  min-width: 550px;
+  left: 50%;
+  top: 4.5em;
+  transform: translate(-50%);
+  border-radius: 5px;
+  background-color: white;
+  padding: 1em 1em 1em 1em;
+  z-index: 1000;
+}
